--- a/src/App.css
+++ b/src/App.css
@@ -13,15 +13,57 @@
   }
 }
 
+
 .App-header {
+  /* background-color: white; */
+
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.drag-and-drop {
+  margin: 8rem;
+  padding: 3.5rem;
+  margin-left: 37%;
+  
+  /* padding: 0.5rem; */
+  gap: 5rem;
+  background-color: #282c34;
+  display: grid;
+  width: 20%;
+  height: 100%;
+  grid-template-columns: repeat(auto-fill,100px);
+  align-items: start;
+}
+
+.dnd-group{
+  background-color: #282c34;
+  border-radius: 5px;
+}
+
+.dnd-item{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 5px;
+  background-color: gold;
+  color: black;
+  padding: 0.5rem;
+  border-radius: 5px;
+}
+
+.dnd-item:not(:last-of-type) {
+  margin-bottom: 0.5rem;
+}
+
+.dnd-item * {
+  margin: 0;
 }
 
 .App-link {
